updated content and styles

--- a/src/app/ma-product-select/ma-product-select.component.html
+++ b/src/app/ma-product-select/ma-product-select.component.html
@@ -1,5 +1,5 @@
 <div class="ma-product-select">
-    <div class="ma_flex--container">
+    <div class="ma_flex--container flex-wrap">
         <div class="ma_flex__item--inherit d-flex">
             <img src="../../assets/images/vendor-full-card-img.png">
         </div>
