--- a/src/app/ma-routing-project/ma-routing-project.component.html
+++ b/src/app/ma-routing-project/ma-routing-project.component.html
@@ -8,6 +8,7 @@
             <mat-list-item role="listitem"><a routerLink="/top-header" mat-button color="primary">Top Header</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/inner-header" mat-button color="primary">Inner Header</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/inner-header" mat-button color="primary">Inner Header</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/menu" mat-button color="primary">Menu</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/image-card-full" mat-button color="primary">Image Card Full</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/top-categories" mat-button color="primary">Top Categories</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/image-card-primary" mat-button color="primary">Image Card Primary</a></mat-list-item>
@@ -18,6 +19,7 @@
             <mat-list-item role="listitem"><a routerLink="/download-component" mat-button color="primary">App Download</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/footer" mat-button color="primary">Footer</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/carousel" mat-button color="primary">Carousel</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/carousel-secondary" mat-button color="primary">Carousel Secondary</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/vendor-services" mat-button color="primary">Vendor Services</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/floating-container" mat-button color="primary">Floating Container</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/section-tabs" mat-button color="primary">Section Tabs</a></mat-list-item>
