--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,7 @@
 @import "components/floating-container";
 @import "components/section-tabs";
 @import "components/product";
+@import "components/menu";
 
 @import "pages/landing-page";
 @import "pages/vendor-page";
