--- a/src/styles/pages/_product-page.scss
+++ b/src/styles/pages/_product-page.scss
@@ -4,9 +4,11 @@
         margin-bottom: 30px;
     }
     .ma-inner-header{
-        margin-bottom: 50px;
+        margin-bottom: 40px;
     }
-
+    .menu-container{
+        position: relative;
+    }
     .product-details-container{
         margin-top: 30px;
         margin-bottom: 50px;
