--- a/src/app/ma-product-details/ma-product-details.component.html
+++ b/src/app/ma-product-details/ma-product-details.component.html
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="col-md-6">
             <div class="ma_flex--container">
-                <div class="ma_flex__item">
-                    <app-ma-carousel></app-ma-carousel>
+                <div class="ma_flex__item w-100">
+                    <app-ma-carousel-secondary></app-ma-carousel-secondary>
                 </div>
             </div>
         </div>
@@ -16,15 +16,15 @@
                     <h1 class="ma__heading-1 ma-txt__secondary">Pizza Meal</h1>
                 </div>
                 <div class="ma_flex__item rating">
-                    <div class="ma_flex--container">
-                        <div class="ma_flex__item p50 ma_flex__item--vcenter">
+                    <div class="ma_flex--container flex-wrap">
+                        <div class="ma_flex__item ma_flex__item--vcenter">
                             <i class="star-icon ma-pr-10 material-icons">star</i>
                             <i class="star-icon ma-pr-10 material-icons">star</i>
                             <i class="star-icon ma-pr-10 material-icons">star</i>
                             <i class="star-icon ma-pr-10 material-icons">star</i>
                             <i class="star-icon ma-pr-10 material-icons">star</i>
                         </div>
-                        <div class="ma_flex__item p50">
+                        <div class="ma_flex__item">
                             <div class="ma-txt__body2 ma-txt__primary">4.0  [ 250+ ]</div>
                         </div>
                     </div>
