--- a/src/styles/components/_top-categories.scss
+++ b/src/styles/components/_top-categories.scss
@@ -19,9 +19,13 @@
     .top-categories-header{
         margin-right: 20px;
         margin-left: 20px;
+        margin-bottom: 0px !important;
         padding: 40px 0px;
         background-color: #ffffff;
-        margin-bottom: 0px !important;
+        @media screen and (max-width: 485px){
+            margin-bottom: -25px !important;
+            text-align: center;
+        }
     }
     .top-cat-middle-col{
         background-color: #ffffff;
@@ -30,27 +34,47 @@
         }
         .row-1{
             button{
-                border-top: 0px;
-                border-left: 0px;
+                @include respond-to("x-small") {
+                    border:1px solid #CCCCCC;
+                }
+                @include respond-to("medium") {
+                    border-top: 0px;
+                    border-left: 0px;
+                }
             }
             .cat-item{
                 &:nth-last-child(1){
                     button{
-                        border-right: 0px;
+                        @include respond-to("x-small") {
+                            border:1px solid #CCCCCC;
+                        }
+                        @include respond-to("medium") {
+                            border-right: 0px;
+                        }
                     }
                 }
             }
         }
         .row-2{
             button{
-                border-bottom: 0px;
-                border-left: 0px;
-                border-top: 0px;
+                @include respond-to("x-small") {
+                    border:1px solid #CCCCCC;
+                }
+                @include respond-to("medium") {
+                    border-bottom: 0px;
+                    border-left: 0px;
+                    border-top: 0px;
+                }
             }
             .cat-item{
                 &:nth-last-child(1){
                     button{
-                        border-right: 0px;
+                        @include respond-to("x-small") {
+                            border:1px solid #CCCCCC;
+                        }
+                        @include respond-to("medium") {
+                            border-right: 0px;
+                        }
                     }
                 }
             }
