--- a/src/styles/base/_misc.scss
+++ b/src/styles/base/_misc.scss
@@ -124,7 +124,11 @@
   margin: 20px 0px !important;
   font-size: 30px;
   padding: 10px 30px !important;
+  line-height: 30px !important;
 }
 .ma-verticle-separator{
   margin: 0 10px;
+}
+.mat-checkbox-checked{
+  background-color: #e91e63;;
 }
