--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -278,7 +278,7 @@
 
   //font-weight: 400;
   /*line-height: 18px;*/
-  line-height: 16px;
+  line-height: 1.5;
   letter-spacing: 0;
 
   @if $colorContrast {
