added sign up page

--- a/src/app/ma-sign-in-page/ma-sign-in-page.component.html
+++ b/src/app/ma-sign-in-page/ma-sign-in-page.component.html
@@ -1,6 +1,6 @@
 <div class="ma-sign-in-page">
     <div class="sign-in-body">
-        <div class="row">
+        <div class="row ma--depth__2">
             <div class="col-md-6 left-col">
                 <div class="ma_flex--container description-text">
                     <div class="ma_flex__item">
