--- a/src/app/ma-routing-project/ma-routing-project.component.html
+++ b/src/app/ma-routing-project/ma-routing-project.component.html
@@ -29,6 +29,7 @@
             <mat-list-item role="listitem"><a routerLink="/vendor-page" mat-button color="primary">Vendor Page</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/product-page" mat-button color="primary">Product Page</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/sign-in-page" mat-button color="primary">Sign In Page</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/sign-up-page" mat-button color="primary">Sign Up Page</a></mat-list-item>
         </mat-list>
     </mat-drawer>
     <div class="example-sidenav-content">
