--- a/src/styles/pages/_sign-in-up-page.scss
+++ b/src/styles/pages/_sign-in-up-page.scss
@@ -52,7 +52,9 @@
                 }
                 .mat-form-field{
                     width: 100%;
-                    margin: 15px 0px;
+                    font-size: 20px;
+                    font-weight: 500;
+                    margin: 10px 0px;
                 }
             }
             .sign-in-btn-wrapper{
@@ -81,6 +83,173 @@
         }
     }
     .sign-in-footer{
-        margin-top: 50px;
+        
+        @include respond-to("x-small") {
+            margin-top: 10px;
+        }
+        @include respond-to("medium") {
+            margin-top: 50px;
+        }
+    }
+}
+
+.ma-sign-up-page{
+    background: url('/assets/images/signinupbg.png') no-repeat;
+    background-size: cover;
+    @include respond-to("x-small") {
+        padding: 10px;
+    }
+    @include respond-to("medium") {
+        padding: 50px;
+    }
+    .sign-up-header{
+        background-color: #fff;
+        border-bottom: 5px solid #E91E63;
+        flex-wrap: wrap;
+        @include respond-to("x-small") {
+            padding: 10px;
+            justify-content: center;
+            text-align: center;
+        }
+        @include respond-to("medium") {
+            padding: 40px;
+            justify-content: start;
+            text-align: left;
+        }
+        img{
+            @include respond-to("x-small") {
+                margin-right: 0px;
+            }
+            @include respond-to("medium") {
+                margin-right: 40px;
+            }
+        }
+        h1, h2{
+            white-space: normal;
+            @include respond-to("x-small") {
+                margin-bottom: 10px;
+            }
+            @include respond-to("medium") {
+                margin-bottom: 0px;
+            }
+        }
+    }
+    .sign-up-body{
+        background-color: #fff;
+        @include respond-to("x-small") {
+            padding: 10px;
+        }
+        @include respond-to("medium") {
+            padding: 30px;
+        }
+        .mat-form-field{
+            width: 100%;
+            font-size: 20px;
+            font-weight: 500;
+            margin: 10px 0px;
+        }
+        .country-code{            
+            @include respond-to("x-small") {
+                width: 70px;
+                margin-right: 15px;
+            }
+            @include respond-to("medium") {
+                width: 100px;
+                margin-right: 20px;
+            }
+        }
+        .agreement-label{
+            white-space: normal;
+        }
+        .left-col{
+            @include respond-to("x-small") {
+                padding: 15px;
+            }
+            @include respond-to("medium") {
+                padding: 20px 40px;
+            }
+        }
+        .right-col{
+            @include respond-to("x-small") {
+                padding: 15px;
+            }
+            @include respond-to("medium") {
+                padding: 20px 40px;
+            }
+        }
+        .ma-btn--large{
+            margin-bottom: 30px !important;
+            width: 100%;
+        }
+    }
+    .sign-up-footer{
+        
+        @include respond-to("x-small") {
+            margin-top: 10px;
+        }
+        @include respond-to("medium") {
+            margin-top: 50px;
+        }
+    }
+    .sign-up-code-wrapper{
+        .ma-btn--large{
+            margin-bottom: 0px !important;
+            @include respond-to("x-small") {
+                width: 200px;
+            }
+            @include respond-to("small") {
+                width: 250px;
+            }
+            @include respond-to("medium") {
+                width: 300px;
+            }
+        }
+        .sign-up-body{
+            min-height: 500px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+    }
+    .code-box-container{
+        margin-bottom: 50px;
+    }
+    .code-box{
+        border: 1px solid #B7B7B7;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &:nth-last-child(1){
+            margin-right: 0px;
+        }
+        @include respond-to("x-small") {
+            max-width: 40px;
+            max-height: 40px;
+            margin-right: 5px;
+        }
+        @include respond-to("small") {
+            max-width: 70px;
+            max-height: 70px;
+            margin-right: 5px;
+        }
+        @include respond-to("medium") {
+            max-width: 100px;
+            max-height: 100px;
+            margin-right: 15px;
+        }
+        .mat-form-field{
+            font-size: 32px;
+            font-weight: 600;
+            margin: 0;
+            text-align: center;
+            .mat-form-field-wrapper{
+                padding-bottom: 25px;
+            }
+            .mat-form-field-underline{
+                display: none;
+            }
+        }
     }
 }
