updated responsiveness and other stlyes

--- a/src/app/ma-product-page/ma-product-page.component.html
+++ b/src/app/ma-product-page/ma-product-page.component.html
@@ -5,8 +5,10 @@
     <div class="container">
         <app-ma-inner-header></app-ma-inner-header>
     </div>
-    <div class="container menu-container">
-        <app-ma-menu></app-ma-menu>
+    <div class="container">
+        <div class="menu-container">
+            <app-ma-menu></app-ma-menu>
+        </div>
     </div>
     <div class="container product-details-container">
         <app-ma-product-details></app-ma-product-details>
