--- a/src/app/ma-sign-up-page/ma-sign-up-page.component.html
+++ b/src/app/ma-sign-up-page/ma-sign-up-page.component.html
@@ -72,7 +72,7 @@
                         <div class="ma_flex__item sign-up-btn-wrapper">
                             <div class="ma_flex--container flex-column">
                                 <div class="ma_flex__item">
-                                    <button mat-raised-button class="ma-btn--large">Sign In</button>
+                                    <button mat-raised-button class="ma-btn--large">Sign Up</button>
                                 </div>
                                 <div class="ma_flex__item justify-content-center d-flex">
                                     <div class="ma-txt__body1-small">
