--- a/src/app/ma-top-header/ma-top-header.component.html
+++ b/src/app/ma-top-header/ma-top-header.component.html
@@ -7,7 +7,7 @@
         <div class="w-100">
             <div class="row align-items-center">
                 <div class="col-md-12">
-                    <div class="ma_flex--container align-items-center">
+                    <div class="ma_flex--container service-option-container">
                         <div class="ma_flex__item--inherit">
                             <div class="top-header-label ma-txt__body2">Service Option</div>
                         </div>
@@ -27,12 +27,12 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4 col-sm-12">
+    <div class="account-settings">
         <div class="ma_flex--container align-items-center">
-            <div class="ma_flex__item">
-                <div class="ma-txt__body2 ma-txt__primary">My Account</div>
+            <div class="ma_flex__item ma_flex__item--vcenter">
+                <div class="ma-txt__body2 ma-txt__primary __link">My Account</div>
             </div>
-            <div class="ma_flex__item">
+            <div class="ma_flex__item ma_flex__item--vcenter">
                 <mat-form-field>
                     <mat-select [(value)]="selected">
                       <mat-option>None</mat-option>
@@ -42,13 +42,13 @@
                     </mat-select>
                   </mat-form-field>
             </div>
-            <div class="ma_flex__item">
-                <div class="ma_flex--container align-items-center">
+            <div class="ma_flex__item ma_flex__item--vcenter">
+                <div class="ma_flex--container align-items-center w-100">
                     <div class="ma_flex__item">
                         <div class="profile-avatar"><img src="../../assets/images/profile-avatar.jpg"></div>
                     </div>
                     <div class="ma_flex__item">
-                        <i class="material-icons">more_vert</i>
+                        <i class="material-icons ma-txt__secondary">more_vert</i>
                     </div>
                 </div>
             </div>
