--- a/src/styles/components/_image-card-full.scss
+++ b/src/styles/components/_image-card-full.scss
@@ -29,7 +29,7 @@
     }
     .btn-learn-more{
         border-radius: 28px;
-        background-color: #E91E63;
+        background-color: $ma_color_primary;
         color: #fff;
         margin: 20px 0px;
         font-size: 30px;
