--- a/src/styles/components/_inner-header.scss
+++ b/src/styles/components/_inner-header.scss
@@ -20,7 +20,7 @@
         }
         .btn-search{
             height: 100%;
-            background-color: #E91E63;
+            background-color: $ma_color_primary;
             border-radius: 0px;
             color: #fff;
         }
