--- a/src/styles/pages/_landing-page.scss
+++ b/src/styles/pages/_landing-page.scss
@@ -85,7 +85,7 @@
         margin-bottom: 30px;
     }
     .recent-section{
-        border-top: 5px solid #E91E63;
+        border-top: 5px solid $ma_color_primary;
         padding: 20px 0px;
         margin-bottom: 20px;
         .recent-cards{
@@ -115,7 +115,7 @@
         }
     }
     .near-me-section{
-        border-top: 5px solid #E91E63;
+        border-top: 5px solid $ma_color_primary;
         padding: 20px 0px;
         margin-bottom: 20px;
         .near-me-cards{
