--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -105,7 +105,7 @@
             cursor: pointer;
         }
         &.thumbnail--active{
-            border: 3px solid #E91E63;
+            border: 3px solid $ma_color_primary;
         }
     }
 }
