--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -123,7 +123,7 @@
 }
 .footer-copyright{
     min-height: 70px;
-    background-color: #E91E63;
+    background-color: $ma_color_primary;
     display: flex;
     align-items: center;
     justify-content: center;
