--- a/src/app/ma-search-result-page/ma-search-result-page.component.html
+++ b/src/app/ma-search-result-page/ma-search-result-page.component.html
@@ -61,7 +61,7 @@
                     <div class="ma_flex__item sr-toggle">
                         <div class="ma_flex--container w-100">
                             <div class="ma_flex__item ma_flex__item--vcenter justify-content-center p25">
-                                <div class="ma-txt__body2 ma-txt__secondary">Sorted by</div>
+                                <div class="ma-txt__body2 ma-txt__secondary sorted-by-label">Sorted by</div>
                             </div>
                             <div class="ma_flex__item ma_flex__item--vcenter justify-content-end">
                                 <mat-button-toggle-group name="srtoggle">
