--- a/src/app/ma-sign-up-page/ma-sign-up-page.component.html
+++ b/src/app/ma-sign-up-page/ma-sign-up-page.component.html
@@ -145,7 +145,7 @@
     <div class="sign-up-footer">
         <div class="ma_flex--container">
             <div class="ma_flex__item justify-content-center d-flex">
-                <div class="ma-txt__body1 ma-txt__white">MULTY APP © 2020. All Rights Reserved. Designed by Optimo</div>
+                <div class="ma-txt__body1 ma-txt__white text-center">MULTY APP © 2020. All Rights Reserved. Designed by Optimo</div>
             </div>
         </div>
     </div>
