--- a/src/styles/pages/_search-result-page.scss
+++ b/src/styles/pages/_search-result-page.scss
@@ -131,7 +131,14 @@
     }
     .paginator{
         justify-content: center;
-        margin-top: 30px;
+        
+        @include respond-to("x-small") {
+            margin-bottom: 20px;
+            margin-top: 0px;
+         }
+         @include respond-to("medium") {
+            margin-top: 30px;
+         }
         button{
             border:0px;
             font-size: 20px;
